syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList
    2        | ExtDefList error

    3 ExtDefList: ExtDef ExtDefList
    4           | %empty

    5 ExtDef: Specifier ExtDecList SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt
    8       | Specifier error
    9       | Specifier FunDec SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag
   16                | STRUCT OptTag LC DefList error

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | VarDec LB error RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | ID LP error
   26       | ID LP error RP
   27       | ID error RP

   28 VarList: ParamDec COMMA VarList
   29        | ParamDec

   30 ParamDec: Specifier VarDec

   31 CompSt: LC DefList StmtList RC
   32       | error DefList StmtList RC

   33 StmtList: Stmt StmtList
   34         | %empty

   35 Stmt: Exp SEMI
   36     | CompSt
   37     | RETURN Exp SEMI
   38     | IF LP Exp RP Stmt
   39     | IF LP Exp RP Stmt ELSE Stmt
   40     | WHILE LP Exp RP Stmt
   41     | Exp error
   42     | RETURN Exp error
   43     | error SEMI
   44     | IF LP error RP Stmt
   45     | IF LP Exp error Stmt
   46     | IF LP error RP Stmt ELSE Stmt
   47     | IF LP Exp error Stmt ELSE Stmt
   48     | WHILE LP error RP Stmt
   49     | WHILE LP Exp error Stmt

   50 DefList: Def DefList
   51        | %empty

   52 Def: Specifier DecList SEMI
   53    | Specifier error SEMI

   54 DecList: Dec
   55        | Dec COMMA DecList

   56 Dec: VarDec
   57    | VarDec ASSIGNOP Exp
   58    | VarDec ASSIGNOP error

   59 Exp: Exp ASSIGNOP Exp
   60    | Exp AND Exp
   61    | Exp OR Exp
   62    | Exp RELOP Exp
   63    | Exp PLUS Exp
   64    | Exp MINUS Exp
   65    | Exp STAR Exp
   66    | Exp DIV Exp
   67    | LP Exp RP
   68    | MINUS Exp
   69    | NOT Exp
   70    | ID LP Args RP
   71    | ID LP RP
   72    | Exp LB Exp RB
   73    | Exp DOT ID
   74    | ID
   75    | INT
   76    | FLOAT
   77    | Exp LB error RB
   78    | error RP
   79    | ID LP Args error
   80    | ID LP error
   81    | Exp ASSIGNOP error
   82    | Exp AND error
   83    | Exp OR error
   84    | Exp RELOP error
   85    | Exp PLUS error
   86    | Exp MINUS error
   87    | Exp STAR error
   88    | Exp DIV error
   89    | MINUS error
   90    | NOT error
   91    | LP Exp error

   92 Args: Exp COMMA Args
   93     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 2 8 16 22 25 26 27 32 41 42 43 44 45 46 47 48 49 53 58 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
    ASSIGNOP (258) 57 58 59 81
    SEMI (259) 5 6 9 35 37 43 52 53
    COMMA (260) 11 28 55 92
    PLUS (261) 63 85
    MINUS (262) 64 68 86 89
    STAR (263) 65 87
    DIV (264) 66 88
    AND (265) 60 82
    OR (266) 61 83
    NOT (267) 69 90
    DOT (268) 73
    LP (269) 23 24 25 26 38 39 40 44 45 46 47 48 49 67 70 71 79 80 91
    RP (270) 23 24 26 27 38 39 40 44 46 48 67 70 71 78
    LB (271) 21 22 72 77
    RB (272) 21 22 72 77
    LC (273) 14 16 31
    RC (274) 14 31 32
    INT <type_int> (275) 21 75
    FLOAT <type_float> (276) 76
    ID <type_string> (277) 17 19 20 23 24 25 26 27 70 71 73 74 79 80
    TYPE <type_string> (278) 12
    RELOP <type_string> (279) 62 84
    IF (280) 38 39 44 45 46 47
    ELSE (281) 39 46 47
    WHILE (282) 40 48 49
    STRUCT (283) 14 15 16
    RETURN (284) 37 42
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <type_pnode> (32)
        on left: 1 2
        on right: 0
    ExtDefList <type_pnode> (33)
        on left: 3 4
        on right: 1 2 3
    ExtDef <type_pnode> (34)
        on left: 5 6 7 8 9
        on right: 3
    ExtDecList <type_pnode> (35)
        on left: 10 11
        on right: 5 11
    Specifier <type_pnode> (36)
        on left: 12 13
        on right: 5 6 7 8 9 30 52 53
    StructSpecifier <type_pnode> (37)
        on left: 14 15 16
        on right: 13
    OptTag <type_pnode> (38)
        on left: 17 18
        on right: 14 16
    Tag <type_pnode> (39)
        on left: 19
        on right: 15
    VarDec <type_pnode> (40)
        on left: 20 21 22
        on right: 10 11 21 22 30 56 57 58
    FunDec <type_pnode> (41)
        on left: 23 24 25 26 27
        on right: 7 9
    VarList <type_pnode> (42)
        on left: 28 29
        on right: 23 28
    ParamDec <type_pnode> (43)
        on left: 30
        on right: 28 29
    CompSt <type_pnode> (44)
        on left: 31 32
        on right: 7 36
    StmtList <type_pnode> (45)
        on left: 33 34
        on right: 31 32 33
    Stmt <type_pnode> (46)
        on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
        on right: 33 38 39 40 44 45 46 47 48 49
    DefList <type_pnode> (47)
        on left: 50 51
        on right: 14 16 31 32 50
    Def <type_pnode> (48)
        on left: 52 53
        on right: 50
    DecList <type_pnode> (49)
        on left: 54 55
        on right: 52 55
    Dec <type_pnode> (50)
        on left: 56 57 58
        on right: 54 55
    Exp <type_pnode> (51)
        on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
        on right: 35 37 38 39 40 41 42 45 47 49 57 59 60 61 62 63 64 65 66 67 68 69 72 73 77 81 82 83 84 85 86 87 88 91 92 93
    Args <type_pnode> (52)
        on left: 92 93
        on right: 70 79 92


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 4 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 2

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag
   16                | STRUCT . OptTag LC DefList error

    ID  shift, and go to state 8

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .
    2        | ExtDefList . error

    error  shift, and go to state 12

    $end  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 4 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    5 ExtDef: Specifier . ExtDecList SEMI
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt
    8       | Specifier . error
    9       | Specifier . FunDec SEMI

    error  shift, and go to state 14
    SEMI   shift, and go to state 15
    ID     shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 7

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 8

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 9

   14 StructSpecifier: STRUCT OptTag . LC DefList RC
   16                | STRUCT OptTag . LC DefList error

    LC  shift, and go to state 20


State 10

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 Program: ExtDefList error .

    $default  reduce using rule 2 (Program)


State 13

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 14

    8 ExtDef: Specifier error .

    $default  reduce using rule 8 (ExtDef)


State 15

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 16

   20 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP
   25       | ID . LP error
   26       | ID . LP error RP
   27       | ID . error RP

    error  shift, and go to state 21
    LP     shift, and go to state 22

    SEMI   reduce using rule 20 (VarDec)
    COMMA  reduce using rule 20 (VarDec)
    LB     reduce using rule 20 (VarDec)


State 17

    5 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 23


State 18

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 10 (ExtDecList)


State 19

    7 ExtDef: Specifier FunDec . CompSt
    9       | Specifier FunDec . SEMI

    error  shift, and go to state 26
    SEMI   shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


State 20

   14 StructSpecifier: STRUCT OptTag LC . DefList RC
   16                | STRUCT OptTag LC . DefList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 51 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 31
    Def              go to state 32


State 21

   27 FunDec: ID error . RP

    RP  shift, and go to state 33


State 22

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP
   25       | ID LP . error
   26       | ID LP . error RP

    error   shift, and go to state 34
    RP      shift, and go to state 35
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 36
    StructSpecifier  go to state 7
    VarList          go to state 37
    ParamDec         go to state 38


State 23

    5 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 5 (ExtDef)


State 24

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 39

    ExtDecList  go to state 40
    VarDec      go to state 18


State 25

   21 VarDec: VarDec LB . INT RB
   22       | VarDec LB . error RB

    error  shift, and go to state 41
    INT    shift, and go to state 42


State 26

   32 CompSt: error . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 51 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 43
    Def              go to state 32


State 27

    9 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 9 (ExtDef)


State 28

   31 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 51 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 44
    Def              go to state 32


State 29

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 30

   52 Def: Specifier . DecList SEMI
   53    | Specifier . error SEMI

    error  shift, and go to state 45
    ID     shift, and go to state 39

    VarDec   go to state 46
    DecList  go to state 47
    Dec      go to state 48


State 31

   14 StructSpecifier: STRUCT OptTag LC DefList . RC
   16                | STRUCT OptTag LC DefList . error

    error  shift, and go to state 49
    RC     shift, and go to state 50


State 32

   50 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 51 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 51
    Def              go to state 32


State 33

   27 FunDec: ID error RP .

    $default  reduce using rule 27 (FunDec)


State 34

   25 FunDec: ID LP error .
   26       | ID LP error . RP

    RP  shift, and go to state 52

    $default  reduce using rule 25 (FunDec)


State 35

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 36

   30 ParamDec: Specifier . VarDec

    ID  shift, and go to state 39

    VarDec  go to state 53


State 37

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 54


State 38

   28 VarList: ParamDec . COMMA VarList
   29        | ParamDec .

    COMMA  shift, and go to state 55

    $default  reduce using rule 29 (VarList)


State 39

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 40

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 41

   22 VarDec: VarDec LB error . RB

    RB  shift, and go to state 56


State 42

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 57


State 43

   32 CompSt: error DefList . StmtList RC

    error   shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 28
    INT     shift, and go to state 62
    FLOAT   shift, and go to state 63
    ID      shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66
    RETURN  shift, and go to state 67

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 69
    Stmt      go to state 70
    Exp       go to state 71


State 44

   31 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 28
    INT     shift, and go to state 62
    FLOAT   shift, and go to state 63
    ID      shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66
    RETURN  shift, and go to state 67

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 72
    Stmt      go to state 70
    Exp       go to state 71


State 45

   53 Def: Specifier error . SEMI

    SEMI  shift, and go to state 73


State 46

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   56 Dec: VarDec .
   57    | VarDec . ASSIGNOP Exp
   58    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 74
    LB        shift, and go to state 25

    $default  reduce using rule 56 (Dec)


State 47

   52 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 75


State 48

   54 DecList: Dec .
   55        | Dec . COMMA DecList

    COMMA  shift, and go to state 76

    $default  reduce using rule 54 (DecList)


State 49

   16 StructSpecifier: STRUCT OptTag LC DefList error .

    $default  reduce using rule 16 (StructSpecifier)


State 50

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 51

   50 DefList: Def DefList .

    $default  reduce using rule 50 (DefList)


State 52

   26 FunDec: ID LP error RP .

    $default  reduce using rule 26 (FunDec)


State 53

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   30 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 30 (ParamDec)


State 54

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 55

   28 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 36
    StructSpecifier  go to state 7
    VarList          go to state 77
    ParamDec         go to state 38


State 56

   22 VarDec: VarDec LB error RB .

    $default  reduce using rule 22 (VarDec)


State 57

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 58

   32 CompSt: error . DefList StmtList RC
   43 Stmt: error . SEMI
   78 Exp: error . RP

    SEMI    shift, and go to state 78
    RP      shift, and go to state 79
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 51 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 43
    Def              go to state 32


State 59

   68 Exp: MINUS . Exp
   89    | MINUS . error

    error  shift, and go to state 80
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 81


State 60

   69 Exp: NOT . Exp
   90    | NOT . error

    error  shift, and go to state 82
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 83


State 61

   67 Exp: LP . Exp RP
   91    | LP . Exp error

    error  shift, and go to state 84
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 85


State 62

   75 Exp: INT .

    $default  reduce using rule 75 (Exp)


State 63

   76 Exp: FLOAT .

    $default  reduce using rule 76 (Exp)


State 64

   70 Exp: ID . LP Args RP
   71    | ID . LP RP
   74    | ID .
   79    | ID . LP Args error
   80    | ID . LP error

    LP  shift, and go to state 86

    $default  reduce using rule 74 (Exp)


State 65

   38 Stmt: IF . LP Exp RP Stmt
   39     | IF . LP Exp RP Stmt ELSE Stmt
   44     | IF . LP error RP Stmt
   45     | IF . LP Exp error Stmt
   46     | IF . LP error RP Stmt ELSE Stmt
   47     | IF . LP Exp error Stmt ELSE Stmt

    LP  shift, and go to state 87


State 66

   40 Stmt: WHILE . LP Exp RP Stmt
   48     | WHILE . LP error RP Stmt
   49     | WHILE . LP Exp error Stmt

    LP  shift, and go to state 88


State 67

   37 Stmt: RETURN . Exp SEMI
   42     | RETURN . Exp error

    error  shift, and go to state 84
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 89


State 68

   36 Stmt: CompSt .

    $default  reduce using rule 36 (Stmt)


State 69

   32 CompSt: error DefList StmtList . RC

    RC  shift, and go to state 90


State 70

   33 StmtList: Stmt . StmtList

    error   shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 28
    INT     shift, and go to state 62
    FLOAT   shift, and go to state 63
    ID      shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66
    RETURN  shift, and go to state 67

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 91
    Stmt      go to state 70
    Exp       go to state 71


State 71

   35 Stmt: Exp . SEMI
   41     | Exp . error
   59 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . DIV Exp
   72    | Exp . LB Exp RB
   73    | Exp . DOT ID
   77    | Exp . LB error RB
   81    | Exp . ASSIGNOP error
   82    | Exp . AND error
   83    | Exp . OR error
   84    | Exp . RELOP error
   85    | Exp . PLUS error
   86    | Exp . MINUS error
   87    | Exp . STAR error
   88    | Exp . DIV error

    error     shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    SEMI      shift, and go to state 94
    PLUS      shift, and go to state 95
    MINUS     shift, and go to state 96
    STAR      shift, and go to state 97
    DIV       shift, and go to state 98
    AND       shift, and go to state 99
    OR        shift, and go to state 100
    DOT       shift, and go to state 101
    LB        shift, and go to state 102
    RELOP     shift, and go to state 103


State 72

   31 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 104


State 73

   53 Def: Specifier error SEMI .

    $default  reduce using rule 53 (Def)


State 74

   57 Dec: VarDec ASSIGNOP . Exp
   58    | VarDec ASSIGNOP . error

    error  shift, and go to state 105
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 106


State 75

   52 Def: Specifier DecList SEMI .

    $default  reduce using rule 52 (Def)


State 76

   55 DecList: Dec COMMA . DecList

    ID  shift, and go to state 39

    VarDec   go to state 46
    DecList  go to state 107
    Dec      go to state 48


State 77

   28 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 28 (VarList)


State 78

   43 Stmt: error SEMI .

    $default  reduce using rule 43 (Stmt)


State 79

   78 Exp: error RP .

    $default  reduce using rule 78 (Exp)


State 80

   78 Exp: error . RP
   89    | MINUS error .

    RP  shift, and go to state 79

    $default  reduce using rule 89 (Exp)


State 81

   59 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . DIV Exp
   68    | MINUS Exp .
   72    | Exp . LB Exp RB
   73    | Exp . DOT ID
   77    | Exp . LB error RB
   81    | Exp . ASSIGNOP error
   82    | Exp . AND error
   83    | Exp . OR error
   84    | Exp . RELOP error
   85    | Exp . PLUS error
   86    | Exp . MINUS error
   87    | Exp . STAR error
   88    | Exp . DIV error

    STAR  shift, and go to state 97
    DIV   shift, and go to state 98
    DOT   shift, and go to state 101
    LB    shift, and go to state 102

    $default  reduce using rule 68 (Exp)


State 82

   78 Exp: error . RP
   90    | NOT error .

    RP  shift, and go to state 79

    $default  reduce using rule 90 (Exp)


State 83

   59 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . DIV Exp
   69    | NOT Exp .
   72    | Exp . LB Exp RB
   73    | Exp . DOT ID
   77    | Exp . LB error RB
   81    | Exp . ASSIGNOP error
   82    | Exp . AND error
   83    | Exp . OR error
   84    | Exp . RELOP error
   85    | Exp . PLUS error
   86    | Exp . MINUS error
   87    | Exp . STAR error
   88    | Exp . DIV error

    DOT  shift, and go to state 101
    LB   shift, and go to state 102

    $default  reduce using rule 69 (Exp)


State 84

   78 Exp: error . RP

    RP  shift, and go to state 79


State 85

   59 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . DIV Exp
   67    | LP Exp . RP
   72    | Exp . LB Exp RB
   73    | Exp . DOT ID
   77    | Exp . LB error RB
   81    | Exp . ASSIGNOP error
   82    | Exp . AND error
   83    | Exp . OR error
   84    | Exp . RELOP error
   85    | Exp . PLUS error
   86    | Exp . MINUS error
   87    | Exp . STAR error
   88    | Exp . DIV error
   91    | LP Exp . error

    error     shift, and go to state 108
    ASSIGNOP  shift, and go to state 93
    PLUS      shift, and go to state 95
    MINUS     shift, and go to state 96
    STAR      shift, and go to state 97
    DIV       shift, and go to state 98
    AND       shift, and go to state 99
    OR        shift, and go to state 100
    DOT       shift, and go to state 101
    RP        shift, and go to state 109
    LB        shift, and go to state 102
    RELOP     shift, and go to state 103


State 86

   70 Exp: ID LP . Args RP
   71    | ID LP . RP
   79    | ID LP . Args error
   80    | ID LP . error

    error  shift, and go to state 110
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    RP     shift, and go to state 111
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp   go to state 112
    Args  go to state 113


State 87

   38 Stmt: IF LP . Exp RP Stmt
   39     | IF LP . Exp RP Stmt ELSE Stmt
   44     | IF LP . error RP Stmt
   45     | IF LP . Exp error Stmt
   46     | IF LP . error RP Stmt ELSE Stmt
   47     | IF LP . Exp error Stmt ELSE Stmt

    error  shift, and go to state 114
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 115


State 88

   40 Stmt: WHILE LP . Exp RP Stmt
   48     | WHILE LP . error RP Stmt
   49     | WHILE LP . Exp error Stmt

    error  shift, and go to state 116
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 117


State 89

   37 Stmt: RETURN Exp . SEMI
   42     | RETURN Exp . error
   59 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . DIV Exp
   72    | Exp . LB Exp RB
   73    | Exp . DOT ID
   77    | Exp . LB error RB
   81    | Exp . ASSIGNOP error
   82    | Exp . AND error
   83    | Exp . OR error
   84    | Exp . RELOP error
   85    | Exp . PLUS error
   86    | Exp . MINUS error
   87    | Exp . STAR error
   88    | Exp . DIV error

    error     shift, and go to state 118
    ASSIGNOP  shift, and go to state 93
    SEMI      shift, and go to state 119
    PLUS      shift, and go to state 95
    MINUS     shift, and go to state 96
    STAR      shift, and go to state 97
    DIV       shift, and go to state 98
    AND       shift, and go to state 99
    OR        shift, and go to state 100
    DOT       shift, and go to state 101
    LB        shift, and go to state 102
    RELOP     shift, and go to state 103


State 90

   32 CompSt: error DefList StmtList RC .

    $default  reduce using rule 32 (CompSt)


State 91

   33 StmtList: Stmt StmtList .

    $default  reduce using rule 33 (StmtList)


State 92

   41 Stmt: Exp error .

    $default  reduce using rule 41 (Stmt)


State 93

   59 Exp: Exp ASSIGNOP . Exp
   81    | Exp ASSIGNOP . error

    error  shift, and go to state 120
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 121


State 94

   35 Stmt: Exp SEMI .

    $default  reduce using rule 35 (Stmt)


State 95

   63 Exp: Exp PLUS . Exp
   85    | Exp PLUS . error

    error  shift, and go to state 122
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 123


State 96

   64 Exp: Exp MINUS . Exp
   86    | Exp MINUS . error

    error  shift, and go to state 124
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 125


State 97

   65 Exp: Exp STAR . Exp
   87    | Exp STAR . error

    error  shift, and go to state 126
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 127


State 98

   66 Exp: Exp DIV . Exp
   88    | Exp DIV . error

    error  shift, and go to state 128
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 129


State 99

   60 Exp: Exp AND . Exp
   82    | Exp AND . error

    error  shift, and go to state 130
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 131


State 100

   61 Exp: Exp OR . Exp
   83    | Exp OR . error

    error  shift, and go to state 132
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 133


State 101

   73 Exp: Exp DOT . ID

    ID  shift, and go to state 134


State 102

   72 Exp: Exp LB . Exp RB
   77    | Exp LB . error RB

    error  shift, and go to state 135
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 136


State 103

   62 Exp: Exp RELOP . Exp
   84    | Exp RELOP . error

    error  shift, and go to state 137
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 138


State 104

   31 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 31 (CompSt)


State 105

   58 Dec: VarDec ASSIGNOP error .
   78 Exp: error . RP

    RP  shift, and go to state 79

    $default  reduce using rule 58 (Dec)


State 106

   57 Dec: VarDec ASSIGNOP Exp .
   59 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . DIV Exp
   72    | Exp . LB Exp RB
   73    | Exp . DOT ID
   77    | Exp . LB error RB
   81    | Exp . ASSIGNOP error
   82    | Exp . AND error
   83    | Exp . OR error
   84    | Exp . RELOP error
   85    | Exp . PLUS error
   86    | Exp . MINUS error
   87    | Exp . STAR error
   88    | Exp . DIV error
